css/styles.css
body {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
 }

 

 .header-nav {
    background-color: #376996;
    color: white;
    display: flex;
    justify-content: center;
    height: 100px;
    align-items: center;
}

#note_capture {
    padding-bottom: 50px;
}


a:link, a:visited {
    color: #F24333;
}

.screenshots {
    height: 470px;
    box-shadow: 1px 1px 20px black;
}



#projects-container {
display: flex;
flex-direction: column;
align-items: center;
}

ul {
list-style: none;
}


ul li {
font-size: 30px;
}


#about_me {
display: flex;
gap: 10px;
justify-content: center;   

}



#about_me li a:link,
#about_me li a:visited {
color: white;
}

#socials {
position: absolute;
top: 50%;
transform: translateY(-50%);
background: white;
color: black;
box-shadow: rgba(100,100,111,.2) 0 7px 29px 0;
padding: 0.5rem;
}

.icon {
width: 100px;
}

#social-ul {
display: flex;
justify-content: end;
align-items: center;
height: 85px;
}

#github-link {
height: 35px;
}

#linkedin-li {
height: 45px;
}

@media screen and (max-width: 500px) {
.screenshots {
height: 174.9px;
}

#social-ul {
    margin-right: 20px;
}


}

@media screen and (min-width: 750px) and (max-width: 900px) {
    .screenshots {
        height: 345px;
        }
}

@media screen and (max-width: 1020px) {
#socials {
display: none;
}
}

